<resources>
    <string name="app_name">Calculador Layouts</string>
    <string name="Calcular">Calcular</string>
    <string name="Borrar">Borrar</string>
    <string name="btn9">9</string>
    <string name="btn8">8</string>
    <string name="btn7">7</string>
    <string name="btn6">6</string>
    <string name="btn5">5</string>
    <string name="btn4">4</string>
    <string name="btn3">3</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>
    <string name="btn0">0\n1\n2\n3\n4\n5\n6\n7\n8\n9</string>
    <string name="btn">0</string>
    <string name="Cuadrado">cuadrado</string>
    <string name="Hexágono">Hexagono</string>
    <string name="Pentágono">Pentagono</string>
    <string name="Círculo">Circulo</string>
    <string name="Rectángulo">Rectangulo</string>
    <string name="Tríangulo">Triangulo</string>
    <string name="Alto">Ingrsse el alto de la figura</string>
    <string name="Ancho">Ingrese la medida</string>
    <string name="Resultado">"Resultado: "</string>
</resources>